circumvent issue related to firefox' selection text maximum size

--- a/manifests/manifest_chrome.template.json
+++ b/manifests/manifest_chrome.template.json
@@ -12,6 +12,12 @@
   "background": {
     "service_worker": "background.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
   "icons": {
     "16": "icon.svg",
     "32": "icon.svg",
