--- a/manifests/manifest_chrome.template.json
+++ b/manifests/manifest_chrome.template.json
@@ -7,7 +7,8 @@
     "contextMenus",
     "tabs",
     "scripting",
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "background": {
     "service_worker": "background.js"
