--- a/manifests/manifest_firefox.template.json
+++ b/manifests/manifest_firefox.template.json
@@ -7,7 +7,8 @@
     "contextMenus",
     "tabs",
     "scripting",
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "background": {
     "scripts": ["background.js"]
